# fp-lab2

./: README.md  bt_bag.opam  dune  dune-project
.github/workflows/: flow.yml
_build/: log
lib/: bt_bag.ml  dune
test/: dune  test_bt_bag.ml  test_property.ml
